@@ -55,7 +55,7 @@ public:
 protected:
     virtual ~CResizableMDIFrame();
 
-    BOOL EnableSaveRestore(LPCTSTR pszSection, BOOL bRectOnly = FALSE);
+    BOOL EnableSaveRestore(LPCTSTR pszSection, BOOL bRectOnly = FALSE, BOOL bHorzResize = TRUE, BOOL bVertResize = TRUE);
 
     virtual CWnd* GetResizableWnd() const
     {
