@@ -387,7 +387,7 @@ int CResizableSheet::GetMinWidth()
 
 // NOTE: this must be called after all the other settings
 //       to have the window and its controls displayed properly
-void CResizableSheet::EnableSaveRestore(LPCTSTR pszSection, BOOL bRectOnly, BOOL bWithPage)
+void CResizableSheet::EnableSaveRestore(LPCTSTR pszSection, BOOL bRectOnly, BOOL bWithPage, BOOL bHorzResize, BOOL bVertResize)
 {
     m_sSection = pszSection;
     m_bSavePage = bWithPage;
@@ -396,7 +396,7 @@ void CResizableSheet::EnableSaveRestore(LPCTSTR pszSection, BOOL bRectOnly, BOOL
     m_bRectOnly = bRectOnly;
 
     // restore immediately
-    LoadWindowRect(pszSection, bRectOnly);
+    LoadWindowRect(pszSection, bRectOnly, bHorzResize, bVertResize);
     {
         LoadPage(pszSection);
         ArrangeLayout();    // needs refresh
